--- a/sbu_advisor/index.html
+++ b/sbu_advisor/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/SBU_Logo.png" />
+    <link rel="icon" type="image/png" href="../src/assets/SBU_Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SBU PathFinder</title>
   </head>
